<resources>
    <string name="app_name">Care Call App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Care Call</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="go_to_home">Go To Home
    </string>
    <string name="menu_gallery">Gallery</string>
    <string name="medical_services">Medical Services</string>
    <string name="support">Support</string>
    <string name="your_services">Your Sevices\n</string>
    <string name="hello">Hello,</string>
    <string name="manage_medical_services">Manage Medical Services</string>
    <string name="add_medical_services">add Medical Services</string>
    <string name="not_found_any_accounts">Not Found Any Accounts</string>
    <string name="ambulances">Ambulances</string>
    <string name="doctors">Doctors</string>
    <string name="add_accounts">add Accounts</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">"Welcome ! "</string>
    <string name="welcome_sign_in">"Welcome ! \n please Sign in to continue "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">email</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amit_kumar">Amit Kumar</string>
    <string name="amitthecoder">amitthecoder</string>
    <string name="bio">As an Android app developer, I have a passion for creating beautiful and functional apps for users. I write code primarily in Kotlin, which is a popular programming language for Android development. My focus is on creating a visually appealing and intuitive user experience that makes using the app a pleasure.</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="user_information">User Information</string>
    <string name="username_">Username</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="_21">21</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_07_02_2003">07/02/2003</string>
    <string name="mobile">Mobile</string>
    <string name="_91_9000000009">+91 9000000009</string>
    <string name="axxxxxxa_gmail_com">axxxxxxa@gmail.com</string>
    <string name="social_media">Social Media</string>
    <string name="change_image">Change Image</string>
    <string name="hospital_profile">Hospital Profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="add_blood">add blood</string>
    <string name="nursery_cd">nursery CD</string>
    <string name="blood_cd">blood CD</string>
    <string name="room_cd">room CD</string>
    <string name="home_image">home image</string>
    <string name="blood_type">blood type</string>
    <string name="quantity">quantity</string>
    <string name="unit">Unit</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="select_type">Select type</string>
    <string name="enter_quantity">enter quantity</string>
    <string name="delete_blood">delete blood</string>
    <string name="are_you_confirm_to_delete_this_blood_bag">are you confirm to delete this blood bag</string>
    <string name="confirm">confirm</string>
    <string name="delete">delete</string>
    <string name="edit_blood_bag">Edit Blood Bag</string>
    <string name="add_blood_bag">Add Blood Bag</string>
    <string name="emergency_rooms">Emergency Rooms</string>
    <string name="status">Status</string>
    <string name="edit_room">edit room</string>
    <string name="room_number">Room Number</string>
    <string name="available">Available</string>
    <string name="are_you_confirm_to_delete_this_room">are you confirm to delete this room</string>
    <string name="number_of_room">number of room</string>
    <string name="add_room">add room</string>
    <string name="are_you_want_to_delete_this_item">Are you want to delete this item</string>
    <string name="email_or_password_is_incorrect">Email or password is incorrect.</string>
    <string name="you_are_not_authorized_to_log_in">You are not authorized to log in.</string>
    <string name="server_error_please_try_again_later">Server error. Please try again later.</string>
    <string name="unexpected_error">Unexpected error: %1$s</string>
    <string name="login_successfully">login successfully</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="add_service">Add Service</string>
    <string name="enter_service_price">enter service price</string>
    <string name="enter_service_description">enter service description</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_new_doctor_account">Create a new doctor account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User name</string>
    <string name="logo">logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="specialty">Specielity</string>
    <string name="license_number">License Number</string>
    <string name="hospital_id">Hospital ID</string>
    <string name="doctor_register_succefully">doctor register successfully</string>
    <string name="ambulance_register_succefully">ambulance register successfully</string>
    <string name="create_a_new_ambulance_account">Create a New Ambulance Account</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="username_is_required">Username is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="first_name_is_required">First name is required</string>
    <string name="last_name_is_required">Last name is required</string>
    <string name="gender_is_required">gender is required</string>
    <string name="invalid_phone_number">invalid phone number</string>
    <string name="phone_is_required">phone is required</string>
    <string name="national_id_required">National ID Required</string>
    <string name="vehicle_number_required">Vehicle Number Required</string>
    <string name="tog_bar">togl bar</string>
    <string name="can_you_confirm_logout">Can you confirm logout</string>
    <string name="save_changes">Save Changes</string>
    <string name="website">Website</string>
    <string name="some_thing_go_wrong">some thing go wrong</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="requested_by">Requested By:</string>
    <string name="bags">Bags:</string>
    <string name="incoming_requests">Incoming Requests</string>
    <string name="request_type">Request Type:</string>
    <string name="hospital_request_notification">hospital request notification</string>
    <string name="ambulance_profile">Ambulance Profile</string>
    <string name="manage_ambulance_personnel_info">Manage ambulance personnel info</string>
    <string name="sample_ambulance_name">Ahmed Ali</string>
    <string name="sample_vehicle_number">Vehicle No: AMB-123</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ambulance_info">Ambulance Info</string>
    <string name="national_id">National ID</string>
    <string name="phone">Phone</string>
    <string name="sample_status">Available</string>
    <string name="doctor_profile">Doctor Profile</string>
    <string name="notification_btn">notification btn</string>
    <string name="link_not_found">Link not found</string>
    <string name="not_any_app_found_to_open_this_link">not any app found to open this link</string>
    <string name="hospital_details">Hospital Details</string>
    <string name="established_date">Established Date</string>
    <string name="manage_your_hospital_information">Manage your hospital information</string>
    <string name="dialog_title">Hospital Request Details</string>
    <string name="btn_close">Close</string>
    <string name="btn_call">Call Patient</string>
    <string name="btn_approve">Approve</string>
    <string name="btn_reject">Reject</string>
    <string name="close">Close</string>
    <string name="request_id">Request ID</string>
    <string name="service_type">Service Type</string>
    <string name="send">Send</string>
    <string name="your_message">your message</string>
    <string name="technical_support">technical support</string>
    <string name="care_call_app">Care Call App</string>
    <string name="phone_number">Phone Number</string>
    <string name="hospital_request_details">Hospital Request Details</string>
    <string name="patient_information">Patient Information</string>
    <string name="patient_name">Patient Name</string>
    <string name="service_details">Service Details</string>
    <string name="active">ACTIVE</string>
    <string name="price">Price</string>
    <string name="request_date">Request Date</string>
    <string name="case_description">Case Description</string>
    <string name="faculty_of_science_beni_suef_university">Faculty of Science - Beni Suef University</string>
    <string name="to_be_pioneers_in_technical_development_and_scientific_research_contributing_to_egypt_s_scientific_and_technological_advancement_through_our_projects_and_innovations">To be pioneers in technical development and scientific research, contributing to Egypt\'s scientific and technological advancement through our projects and innovations.</string>
    <string name="send_email">Send Email</string>
    <string name="who_we_are">Who We Are</string>
    <string name="to_develop_tech_applications_and_projects_that_serve_the_community_share_knowledge_with_fellow_students_and_solve_real_world_problems_using_science_and_technology">To develop tech applications and projects that serve the community, share knowledge with fellow students, and solve real-world problems using science and technology.</string>
    <string name="our_vision">Our Vision</string>
    <string name="our_mission">Our Mission</string>
    <string name="we_are_a_group_of_passionate_students_at_the_faculty_of_science_beni_suef_university_striving_to_develop_our_technical_skills_and_provide_innovative_solutions_we_believe_in_the_power_of_science_and_technology_to_improve_people_s_lives_and_build_a_better_future">We are a group of passionate students at the Faculty of Science, Beni Suef University, striving to develop our technical skills and provide innovative solutions. We believe in the power of science and technology to improve people\'s lives and build a better future.</string>
    <string name="settings">Settings</string>
</resources>