<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home_iconMenu"
            android:icon="@drawable/ic_home"
            android:title="@string/go_to_home" />
        <item
            android:id="@+id/manage_medical_services_iconMenu"
            android:icon="@drawable/ic_manage_service_accounts"
            android:title="@string/manage_medical_services" />

        <item
            android:id="@+id/aboutUs_iconMenu"
            android:icon="@drawable/ic_info"
            android:title="@string/about_us" />

        <item
            android:id="@+id/Log_out_iconMenu"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />
        <item
            android:id="@+id/settings_iconMenu"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

    </group>

</menu>