<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:background="@drawable/carecall_logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:gravity="start"
        android:lineSpacingExtra="12dp"
        android:paddingStart="24sp"
        android:text="@string/create_a_new_doctor_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <!-- Username Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:enabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:enabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:enabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="30dp"
        android:enabled="true"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="1dp"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/loading"
            layout="@layout/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
