<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintHeight_percent=".1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_background_gradient"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/massageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_want_to_delete_this_item"
        android:textSize="24sp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="end"
        tools:ignore="UselessLeaf">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="end">


        <com.google.android.material.button.MaterialButton
            app:cornerRadius="8dp"
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:backgroundTint="#109B00"
            android:layout_marginHorizontal="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="8dp"
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:backgroundTint="#D50101"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>
